# bobot

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  pico_sdk_import.cmake
include/: bobot.h  config.h  debug.h  encoder.h  h_bridge.h  i2c.h  lwipopts.h  motor.h  net.h  net_config.h  onboard_led.h  pid.h  pin.h  proximity_sensor.h  pwm.h  rgb_led.h  rgb_sensor.h  ring_buffer.h  servo.h  ultra_sensor.h  utils.h
src/: bobot.cpp  debug.c  encoder.cpp  h_bridge.cpp  i2c.cpp  main.cpp  motor.cpp  net.c  net_debug.c  onboard_led.cpp  pid.cpp  pin.cpp  proximity_sensor.cpp  pwm.cpp  rgb_led.cpp  rgb_sensor.cpp  ring_buffer.cpp  servo.cpp  ultra_sensor.cpp  utils.cpp
